--- a/Gallery.html
+++ b/Gallery.html
@@ -14,10 +14,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">P L</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home</a>
@@ -77,7 +77,7 @@
       </div>
       <section class="m-5 productsection " id="productwrapper">
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col d-flex flex-wrap justify-content-between ">
+            <div class="col-md-4 col-12 ">
                 <div class="card h-100">
                     <img src="./images/iphone-x-silver.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col col-md-4 col-12">
                 <div class="card h-100">
                     <img src="./images/iPhone-12-Pro-Max.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col col-md-4 col-12">
                 <div class="card h-100">
                     <img src="./images/Huawei-P40-Pro.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
